# archon

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  FINAL_COMPREHENSIVE_REPORT.md  LAUNCH.md  LICENSE  MIGRATION_REPORT.md  PHASE-3-4-COMPLETE.md  PHASE-5-6-COMPLETE.md  PHASE_3_COMPLETION.md  PHASE_4_COMPLETION.md  PHASE_5_COMPLETION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES.md  STRESS_TEST_FINAL_REPORT.md  TEST_REPORT.md  archon.yaml  debug_test.py  index.html  integration_test.py  migrate-skills-improved.ps1  migrate-skills.ps1  omniskill.yaml  pyproject.toml  stress_test.py  stress_test_fixed.py  synapse-tasks.md  test_file_ops.py  validate-skills.ps1
.claude/: file-daemon-architecture.xml  forge-progress.xml  handoff-2026-04-12.xml  handoff-file-ops-2026-04-12.xml  rw-tools-plan.xml  settings.json
.understand-anything/: .understandignore  fingerprints.json  meta.json
adapters/: README.md  __init__.py  base.py
agents/: README.md
batch-runs/: README.md
bundles/: README.md
catalog/: README.md  mcp-servers.yaml
docs/: AUDIT_REPORT.md  DDE-METHODOLOGY.md  README.md  REMEDIATION_PLAN.md  SYNAPSES_EXECUTABLE.md  agent-cards.html  agent-cards.md  agents.html  architecture.html  architecture.md  archon-for-kids.html  cli-guide.html  cli-guide.md  creating-agents.html  creating-agents.md  creating-bundles.html  creating-bundles.md  creating-pipelines.html  creating-pipelines.md  creating-skills.html  creating-skills.md  creating-synapses.html  creating-synapses.md  faq.html  faq.md  getting-started.html  getting-started.md  guardrails.md  index.html  integration-catalog.html  integration-catalog.md  llms-txt.html  llms-txt.md  pipeline-orchestration.md  pipelines.html  platform-guide.html  platform-guide.md  sequential-thinking.md  skills.html  styles.css  (+1 more)
file-ops-rs/: Cargo.toml
file-ops-rs/src/: errors.rs  lib.rs  main.rs
file-ops-rs/src/rpc/: mod.rs  router.rs  schema.rs
file-ops-rs/src/services/: logging.rs  metrics.rs  mod.rs  rate_limit.rs
file-ops-rs/src/tools/: file_create.rs  file_edit.rs  file_insert.rs  file_read.rs  file_search.rs  file_structure.rs  mod.rs
file-ops-rs/src/transport/: message.rs  mod.rs  stdio.rs
file-ops-rs/src/utils/: diff.rs  file_io.rs  hashing.rs  mod.rs  parser.rs  validation.rs
hooks/: hooks.yaml  on_deviation.py  on_failure.py  post_step.py  post_step_hook_v2.py  pre_step.py  pre_step_hook_v2.py  session_start.py
pipelines/: README.md  batch-sdd-pipeline.yaml  debug-pipeline.yaml  dissect-to-skill.yaml  full-product.yaml  sdd-pipeline.yaml  skill-factory.yaml  ux-pipeline.yaml
prompts/: README.md  router.md  shared.md  system.md
schemas/: agent-manifest.schema.yaml  bundle-manifest.schema.yaml  context-handoff.schema.yaml  deviation-log.schema.yaml  guardrails.schema.yaml  hook-event.schema.yaml  mcp-catalog.schema.yaml  permission.schema.yaml  pipeline.schema.yaml  session.schema.yaml  skill-manifest.schema.yaml  synapse-manifest.schema.yaml  telemetry-envelope.schema.yaml  thinking-trace.schema.yaml  tool-invocation.schema.yaml
scripts/: README.md  admin.py  batch-upgrade-stubs.py  build_docs.py  doctor.py  export_protocols.py  generate-agent-cards.py  generate-llms-txt.py  install.py  migrate.py  skill-compliance-check.py  test_agent_cards.py  test_registry.py  update.py  validate.py
sdk/: __init__.py  archon.py  omniskill.py
servers/forge/: Cargo.toml  test-input.json
servers/forge/src/: buffer.rs  diff.rs  encoding.rs  engine.rs  errors.rs  main.rs
servers/forge/src/tools/: read.rs  write.rs
skills/: README.md
tests/: conftest.py  test_agent_guardrails.py  test_anti_rationalization.py  test_artifact_validator.py  test_cli_pipeline.py  test_code_quality.py  test_completeness.py  test_consistency.py  test_guardrails.py  test_hooks.py  test_integration.py  test_metacognition.py  test_pattern_recognition.py  test_pipeline_engine.py  test_pipeline_state.py  test_security_awareness.py  test_sequential_thinking.py  test_v3_policy.py  (+7 more)
wakeel/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  providers.yaml  pyproject.toml  requirements.txt
wakeel/edge/: .dev.vars.example  .gitignore  package-lock.json  package.json  parity_check.mjs  wrangler.jsonc
wakeel/edge/src/: harness.ts  index.json  index.ts  provider.ts  router.ts  sessions.ts  synapses.ts  twilio.ts  verify.ts
wakeel/scripts/: build_index.py  extract_synapses.py
wakeel/src/wakeel/: __init__.py  chat.py  config.py  paths.py
wakeel/src/wakeel/channels/whatsapp/: app.py  inbound.py  outbound.py
wakeel/src/wakeel/kernel/: harness.py  sessions.py
wakeel/src/wakeel/kernel/composer/: composer.py
wakeel/src/wakeel/kernel/provider/: client.py
wakeel/src/wakeel/kernel/router/: indexer.py  skill_router.py
wakeel/src/wakeel/kernel/verify/: verifier.py
wakeel/tests/: test_composer.py  test_harness.py  test_provider.py  test_router.py  test_webhook.py
(+623 files in other folders)
