[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archon"
version = "1.0.0"
description = "Archon — The Virtuoso Engine for AI Agents. Universal skills framework with enforced guardrails, cognitive synapses, and pipeline orchestration."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ahmed Taha", email = "tahaa755@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
keywords = ["ai", "agents", "skills", "archon", "virtuoso", "claude", "cursor", "windsurf"]
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/SufficientDaikon/archon"
Documentation = "https://sufficientdaikon.github.io/archon/"
Repository = "https://github.com/SufficientDaikon/archon"

[project.scripts]
archon = "archon.cli:app"
