[package]
name = "file_ops_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Performance & Concurrency
dashmap = "5"
bytes = "1"
parking_lot = "0.12"

# Schema validation
jsonschema = "0.16"

# File operations & parsing
walkdir = "2"
regex = "1"
sha2 = "0.10"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
lazy_static = "1"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
